--- a/app/src/main/res/layout/fragment_reforestation.xml
+++ b/app/src/main/res/layout/fragment_reforestation.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ReforestationFragment">
 
     <TextView
+        android:id="@+id/TVReforestation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="EcoHelper"
+        android:layout_marginTop="155dp"
+        android:text="Reforestation"
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="322dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
