--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="blue_700">#1976D2</color>
     <color name="teal_200">#80CBC4</color>
     <color name="teal_700">#00897B</color>
+    <color name="blue_900">#0D47A1</color>
+    <color name="orange_700">#F57C00</color>
 </resources>
