--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -28,14 +29,14 @@
 
     <ImageView
         android:id="@+id/IVAnimalLover"
-        android:layout_width="218dp"
-        android:layout_height="153dp"
+        android:layout_width="234dp"
+        android:layout_height="156dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="108dp"
         android:contentDescription=""
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/plant_sidemenu" />
+        app:srcCompat="@drawable/climate" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
