--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,8 +13,8 @@
         android:layout_width="414dp"
         android:layout_height="215dp"
         android:src="@drawable/quiz_img"
-        tools:layout_editor_absoluteX="-3dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
@@ -22,7 +23,7 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="239dp"
         android:background="@drawable/frame_rect"
-        android:backgroundTint="@color/blue_700"
+        android:backgroundTint="@color/grey_600"
         android:padding="10dp"
         android:text="TextView"
         android:textAlignment="center"
@@ -36,18 +37,20 @@
         android:layout_height="50dp"
         android:layout_marginStart="37dp"
         android:layout_marginTop="326dp"
-        android:background="@drawable/frame_rect"
+        android:backgroundTint="@color/grey_600"
         android:text="Quiz 1"
+        android:onClick="sendMessage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button2"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="63dp"
         android:layout_marginTop="396dp"
-        android:background="@drawable/frame_rect"
+        android:backgroundTint="@color/blue"
         android:text="Quiz 2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -58,7 +61,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="63dp"
         android:layout_marginTop="479dp"
-        android:background="@drawable/frame_rect"
         android:text="Quiz 3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -69,10 +71,25 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="63dp"
         android:layout_marginTop="558dp"
-        android:background="@drawable/frame_rect"
         android:text="Quiz 4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="218dp"
+        tools:layout_editor_absoluteY="416dp" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="105dp"
+        android:layout_height="85dp"
+        android:src="@drawable/ic_launcher_foreground"
+        tools:layout_editor_absoluteX="215dp"
+        tools:layout_editor_absoluteY="499dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
