--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="teal_700">#00897B</color>
     <color name="blue_900">#0D47A1</color>
     <color name="orange_700">#F57C00</color>
+    <color name="grey_600">#757575</color>
 </resources>
