--- a/app/src/main/res/menu/menu_options.xml
+++ b/app/src/main/res/menu/menu_options.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/SendFeedback"
@@ -8,16 +9,13 @@
 
     <item
         android:id="@+id/Help"
-        android:icon="@android:drawable/ic_menu_add"
-        android:title="Help" />
+        android:icon="@android:drawable/ic_menu_help"
+        android:title="Help"
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/LogOut"
         android:icon="@android:drawable/ic_menu_add"
         android:title="Log Out" />
 
-    <item
-        android:id ="@+id/DestReforestation"
-        android:icon="@android:drawable/ic_menu_info_details"
-        android:title="Reforestation" />
 </menu>
