--- a/app/src/main/res/navigation/nav_app.xml
+++ b/app/src/main/res/navigation/nav_app.xml
@@ -6,6 +6,27 @@
     app:startDestination="@id/DestReforestation">
 
     <fragment
+        android:id="@+id/DestHome"
+        android:name="com.example.madapp.HomeFragment"
+        android:label="Home"
+        tools:layout="@layout/fragment_dest_home" >
+        <action
+            android:id="@+id/NextToTipsReduceCF"
+            app:destination="@id/DestTipsReduceCF" />
+    </fragment>
+    <fragment
+        android:id="@+id/DestTrackCarbonFootprint"
+        android:name="com.example.wia2007_project.TrackCarbonFootprintFragment"
+        android:label="Track Carbon Footprint"
+        tools:layout="@layout/fragment_carbonfootprint" />
+    <fragment
+        android:id="@+id/DestTipsReduceCF"
+        android:name="com.example.wia2007_project.TipsReduceCFFragment"
+        android:label="TipsReduceCF"
+        tools:layout="@layout/fragment_tipsreducecf" />
+
+
+    <fragment
         android:id="@+id/DestReforestation"
         android:name="com.example.madapp.ReforestationFragment"
         android:label="Reforestation"
