--- a/app/src/main/res/layout/fragment_carbonfootprint.xml
+++ b/app/src/main/res/layout/fragment_carbonfootprint.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#65AEDD"
+    android:background="?attr/colorPrimary"
     tools:context=".TrackCarbonFootprintFragment">
 
     <!-- TODO: Update blank fragment layout -->
