--- a/app/src/main/res/layout/fragment_carbonft_home.xml
+++ b/app/src/main/res/layout/fragment_carbonft_home.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#65AEDD"
-    tools:context=".HomeFragment">
+    android:background="?attr/colorPrimary"
+    tools:context=".CarbonFtFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -26,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:backgroundTint="@color/blue_900"
         android:text="Track Carbon Footprint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Tips Reduce Carbo Footprint"
+        android:backgroundTint="@color/blue_900"
+        android:text="Tips Reduce Carbon Footprint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/IVTipsReduce" />
