--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,87 +8,48 @@
     tools:context=".QuizFragment">
 
     <ImageView
-        android:id="@+id/imageView10"
+        android:id="@+id/IVQuiz"
         android:layout_width="414dp"
         android:layout_height="215dp"
         android:src="@drawable/quiz_img"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="341dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="239dp"
-        android:background="@drawable/frame_rect"
-        android:backgroundTint="@color/grey_600"
-        android:padding="10dp"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
-        android:id="@+id/button"
-        android:layout_width="340dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="326dp"
-        android:backgroundTint="@color/grey_600"
-        android:text="Quiz 1"
+        android:id="@+id/BtnQuiz1"
+        android:layout_width="260dp"
+        android:layout_height="86dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="244dp"
+        android:backgroundTint="@color/blue_900"
         android:onClick="sendMessage"
+        android:text="Quiz 1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="63dp"
-        android:layout_marginTop="396dp"
-        android:backgroundTint="@color/blue"
+        android:id="@+id/BtnQuiz2"
+        android:layout_width="260dp"
+        android:layout_height="86dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="35dp"
+        android:backgroundTint="@color/blue_900"
+        android:onClick="sendMessage"
         android:text="Quiz 2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/BtnQuiz1" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="63dp"
-        android:layout_marginTop="479dp"
+        android:id="@+id/BtnQuiz3"
+        android:layout_width="260dp"
+        android:layout_height="86dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="35dp"
+        android:backgroundTint="@color/blue_900"
+        android:onClick="sendMessage"
         android:text="Quiz 3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="63dp"
-        android:layout_marginTop="558dp"
-        android:text="Quiz 4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="218dp"
-        tools:layout_editor_absoluteY="416dp" />
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="105dp"
-        android:layout_height="85dp"
-        android:src="@drawable/ic_launcher_foreground"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="499dp" />
+        app:layout_constraintTop_toBottomOf="@+id/BtnQuiz2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
