--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -4,22 +4,22 @@
 
     <item
         android:id ="@+id/DestHome"
-        android:icon="@android:drawable/ic_menu_agenda"
+        android:icon="@drawable/baseline_home_24"
         android:title="Home" />
 
     <item
-        android:id ="@+id/DestCarbonFootprint"
-        android:icon="@android:drawable/ic_menu_agenda"
+        android:id ="@+id/DestTipsReduceCF"
+        android:icon="@drawable/carbon_footprint"
         android:title="Carbon Footprint" />
 
     <item
         android:id ="@+id/DestReforestation"
-        android:icon="@android:drawable/ic_menu_info_details"
+        android:icon="@drawable/reforestation"
         android:title="Reforestation" />
 
     <item
         android:id ="@+id/DestProfile"
-        android:icon="@android:drawable/ic_menu_preferences"
+        android:icon="@drawable/baseline_person_outline_24"
         android:title="Profile"/>
 
 </menu>
