--- a/app/src/main/res/menu/menu_options.xml
+++ b/app/src/main/res/menu/menu_options.xml
@@ -8,7 +8,7 @@
         android:title="Send Feedback" />
 
     <item
-        android:id="@+id/Help"
+        android:id="@+id/DestHelp"
         android:icon="@drawable/baseline_question_mark_24"
         android:title="Help"
         app:showAsAction="ifRoom"/>
