--- a/app/src/main/res/layout/fragment_carbonfootprint.xml
+++ b/app/src/main/res/layout/fragment_carbonfootprint.xml
@@ -24,41 +24,79 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/TVQuestion1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="168dp"
-        android:text="What is your electricity usage?"
-        android:textColor="#000000"
-        android:textSize="20sp"
+    <FrameLayout
+        android:id="@+id/fragmentlayout"
+        android:layout_width="408dp"
+        android:layout_height="412dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="148dp"
+        android:background="@drawable/rounded_frame_background"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/TVTitleTrackCF"
-        app:layout_constraintTop_toBottomOf="@+id/TVTitleTrackCF" />
+        app:layout_constraintStart_toStartOf="parent">
 
-    <EditText
-        android:id="@+id/editTextText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:hint="Number"
-        android:inputType="text"
-        android:minHeight="48dp"
-        app:layout_constraintStart_toStartOf="@+id/TVQuestion1"
-        app:layout_constraintTop_toBottomOf="@+id/TVQuestion1" />
+        <TextView
+            android:id="@+id/TVUnit2"
+            android:layout_width="102dp"
+            android:layout_height="33dp"
+            android:layout_gravity="top"
+            android:layout_marginStart="280dp"
+            android:layout_marginTop="110dp"
+            android:text="kWh"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            app:layout_constraintStart_toEndOf="@+id/editTextText2"
+            app:layout_constraintTop_toBottomOf="@+id/TVQuestion1" />
 
-    <TextView
-        android:id="@+id/TVUnit"
-        android:layout_width="142dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="52dp"
-        android:text="kWh"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/editTextText2"
-        app:layout_constraintTop_toBottomOf="@+id/TVQuestion1" />
+        <EditText
+            android:id="@+id/editTextText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="100dp"
+            android:ems="10"
+            android:hint="Number"
+            android:inputType="text"
+            android:minHeight="48dp"
+            app:layout_constraintStart_toStartOf="@id/TVQuestion"
+            app:layout_constraintTop_toBottomOf="@id/TVQuestion" />
+
+        <TextView
+            android:id="@+id/TVQuestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|top|center_vertical"
+            android:layout_marginTop="30dp"
+            android:text="What is your electricity usage?"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="parent" />
+
+        <Button
+            android:id="@+id/BtnNextQuestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:layout_marginBottom="30dp"
+            android:backgroundTint="@color/blue_900"
+            android:text="Next Question"
+            app:icon="@drawable/next"
+            app:iconGravity="end" />
+
+        <TextView
+            android:id="@+id/TVQuestionSentence"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:layout_marginBottom="200dp"
+            android:text="at a factor of 0.7130 kgCO2e/kWh"
+            android:textColor="#000000"
+            android:textSize="24sp" />
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
