--- a/app/src/main/res/navigation/nav_app.xml
+++ b/app/src/main/res/navigation/nav_app.xml
@@ -5,10 +5,11 @@
     android:id="@+id/nav_app"
     app:startDestination="@id/DestReforestation">
 
+    <!--Carbon Footprint module-->
     <fragment
-        android:id="@+id/DestHome"
+        android:id="@+id/DestCarbonFootprint"
         android:name="com.example.madapp.CarbonFtFragment"
-        android:label="Home"
+        android:label="Carbon Footprint"
         tools:layout="@layout/fragment_carbonft_home" >
         <action
             android:id="@+id/NextToTipsReduceCF"
@@ -27,7 +28,7 @@
         tools:layout="@layout/fragment_tipsreducecf" />
 
 
-
+    <!--Reforestation module-->
     <fragment
         android:id="@+id/DestReforestation"
         android:name="com.example.madapp.ReforestationFragment"
@@ -46,22 +47,41 @@
         android:label="Quiz"
         tools:layout="@layout/fragment_quiz" />
 
-<!--    <activity-->
-<!--        android:id="@+id/DestMapsActivity"-->
-<!--        android:name="com.example.madapp.MapsActivity"-->
-<!--        android:label="Google Maps Location"-->
-<!--        tools:layout="@layout/activity_maps" />-->
-
-    <fragment
-        android:id="@+id/DestHelp"
-        android:name="com.example.madapp.HelpFragment"
-        android:label="Help"
-        tools:layout="@layout/fragment_help" />
     <fragment
         android:id="@+id/DestMapsActivity"
         android:name="com.example.madapp.MapsFragment"
         android:label="Google Maps Location"
         tools:layout="@layout/fragment_maps" />
+
+    <!--Profile module-->
+    <fragment
+        android:id="@+id/DestProfile"
+        android:name="com.example.madapp.ProfileFragment"
+        android:label="Profile"
+        tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/DestEditProfile"
+        android:name="com.example.madapp.EditProfileFragment"
+        android:label="Edit Profile"
+        tools:layout="@layout/fragment_edit_profile" />
+    <fragment
+        android:id="@+id/DestFeedback"
+        android:name="com.example.madapp.FeedbackFragment"
+        android:label="Feedback"
+        tools:layout="@layout/fragment_feedback" />
+    <fragment
+        android:id="@+id/DestProfileEnhancedSurvey"
+        android:name="com.example.madapp.ProfileEnhancedSurveyFragment"
+        android:label="Profile Enhanced Survey"
+        tools:layout="@layout/fragment_profile_enhanced_survey" />
+
+
+    <!--Other pages-->
+    <fragment
+        android:id="@+id/DestHelp"
+        android:name="com.example.madapp.HelpFragment"
+        android:label="Help"
+        tools:layout="@layout/fragment_help" />
 
 
 </navigation>
