--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -8,7 +8,7 @@
         android:title="Home" />
 
     <item
-        android:id ="@+id/DestTipsReduceCF"
+        android:id ="@+id/DestCarbonFootprint"
         android:icon="@drawable/carbon_footprint"
         android:title="Carbon Footprint" />
 
