--- a/app/src/main/res/menu/menu_options.xml
+++ b/app/src/main/res/menu/menu_options.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/SendFeedback"
+        android:id="@+id/DestFeedback"
         android:icon="@drawable/feedback"
         android:title="Send Feedback" />
 
