--- a/app/src/main/res/menu/menu_side.xml
+++ b/app/src/main/res/menu/menu_side.xml
@@ -5,6 +5,28 @@
     android:layout_height="wrap_content">
 
     <group
+        android:id="@+id/SideNavNews"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+        <item
+            android:id="@+id/DestNews"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:title="News" />
+        <item
+            android:id="@+id/DestProgrammes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:title="Programmes" />
+
+        <item
+            android:id="@+id/DestOrganizations"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:title="Organizations" />
+    </group>
+
+    <group
         android:id="@+id/SideNavCF"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
