--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -22,18 +22,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-<!--        <ImageButton-->
-<!--            android:id="@+id/imageButton3"-->
-<!--            android:layout_width="25dp"-->
-<!--            android:layout_height="25dp"-->
-<!--            android:layout_marginTop="40dp"-->
-<!--            android:background="#65AEDD"-->
-<!--            android:scaleType="fitCenter"-->
-<!--            android:src="@drawable/back_button"-->
-<!--            app:layout_constraintEnd_toStartOf="@+id/textView"-->
-<!--            app:layout_constraintHorizontal_bias="0.66"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
+        <!--        <ImageButton-->
+        <!--            android:id="@+id/imageButton3"-->
+        <!--            android:layout_width="25dp"-->
+        <!--            android:layout_height="25dp"-->
+        <!--            android:layout_marginTop="40dp"-->
+        <!--            android:background="#65AEDD"-->
+        <!--            android:scaleType="fitCenter"-->
+        <!--            android:src="@drawable/back_button"-->
+        <!--            app:layout_constraintEnd_toStartOf="@+id/textView"-->
+        <!--            app:layout_constraintHorizontal_bias="0.66"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="parent" />-->
 
         <TextView
             android:id="@+id/textView"
@@ -70,7 +70,7 @@
             android:textSize="12dp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView3"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.362"
+            app:layout_constraintHorizontal_bias="0.331"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:layout_constraintVertical_bias="0.0" />
@@ -89,7 +89,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
         <RatingBar
-            android:id="@+id/ratingBar"
+            android:id="@+id/RatingBarFeedback"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -99,35 +99,45 @@
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
         <EditText
-            android:id="@+id/textView6"
+            android:id="@+id/ETFeedback"
             android:layout_width="240dp"
             android:layout_height="205dp"
             android:layout_marginTop="44dp"
+            android:background="@drawable/rounded_edittext_bg"
             android:gravity="top|left"
             android:hint="Tell us more"
             android:inputType="textMultiLine"
             android:lines="5"
             android:maxLines="10"
-            android:textSize="15dp"
-            android:background="@drawable/rounded_edittext_bg"
-            android:paddingTop="10dp"
             android:paddingStart="10dp"
+            android:paddingTop="10dp"
+            android:textSize="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.438"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+            app:layout_constraintTop_toBottomOf="@+id/RatingBarFeedback" />
 
         <Button
             android:id="@+id/BtnSubmitFeedback"
             android:layout_width="95dp"
             android:layout_height="40dp"
             android:layout_marginTop="44dp"
-            android:text="Submit"
             android:background="@drawable/button"
+            android:text="Submit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.706"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            app:layout_constraintTop_toBottomOf="@+id/ETFeedback" />
+
+        <TextView
+            android:id="@+id/TVRating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="77dp"
+            android:layout_marginTop="274dp"
+            android:text=""
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
