Integrated Login module with the whole app

--- a/app/src/main/res/menu/menu_options.xml
+++ b/app/src/main/res/menu/menu_options.xml
@@ -14,7 +14,7 @@
         app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/LogOut"
+        android:id="@+id/DestLogout"
         android:icon="@drawable/exit"
         android:title="Log Out" />
 
