change the colour text for login button as constrast ratio change the icon for carbon footprint side menu, change the fragment_login.xml to connect to LoginFragment

--- a/app/src/main/res/menu/menu_side.xml
+++ b/app/src/main/res/menu/menu_side.xml
@@ -31,10 +31,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <item
-            android:id="@+id/DestTrackCarbonFootprint"
+            android:id="@+id/DestCarbonFootprint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/track"
+            android:icon="@drawable/carbon_footprint"
             android:title="Carbon Footprint" />
         <item
             android:id="@+id/DestTipsReduceCF"
