--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home">
+    tools:context=".LoginFragment">
 
     <TextView
         android:id="@+id/textView5"
@@ -46,6 +46,7 @@
         android:background="#03A9F4"
         android:foregroundTint="#03A9F4"
         android:text="Create New Account"
+        android:textColor="#4A148C"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -79,19 +80,19 @@
 
     <Button
         android:id="@+id/fgtBtn"
-        android:layout_width="115dp"
-        android:layout_height="48dp"
+        android:layout_width="210dp"
+        android:layout_height="49dp"
         android:layout_marginStart="148dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="148dp"
         android:background="#F9F9F9"
         android:backgroundTint="#F9F9F9"
         android:text="forgot password"
         android:textAllCaps="false"
         android:textColor="#DA1D1D"
-        android:textSize="8sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/BtnLogin" />
 
@@ -104,6 +105,7 @@
         android:layout_marginEnd="148dp"
         android:background="#03A9F4"
         android:text="Log in"
+        android:textColor="#5E35B1"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
