--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -80,17 +80,16 @@
 
     <Button
         android:id="@+id/fgtBtn"
-        android:layout_width="210dp"
-        android:layout_height="49dp"
+        android:layout_width="154dp"
+        android:layout_height="38dp"
         android:layout_marginStart="148dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="148dp"
-        android:background="#F9F9F9"
-        android:backgroundTint="#F9F9F9"
-        android:text="forgot password"
+        android:backgroundTint="@color/white"
+        android:text="Forgot password?"
         android:textAllCaps="false"
         android:textColor="#DA1D1D"
-        android:textSize="20sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
